@@ -1,3 +1,15 @@
+2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b15
+
+ * Change: Default width for popups:600 (500)
+
+ * Change: Default height for popups: 550 (500)
+
+ * Change: Enhanced function popup_link()
+
+ * Fix: Function addUrlArg() was broken.
+
+ * New: Function galleryIconLink()
+ 
 2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b14
 
  * Change: Enhanced function drawSelect2()
